--- a/front/public/index.html
+++ b/front/public/index.html
@@ -26,8 +26,8 @@
     -->
     <title>Weather Application</title>
   </head>
-  <body style="background-image: url('%PUBLIC_URL%/weather3.jpg'); background-size: 100%
-  100%;
+  <body style="background-image: url('%PUBLIC_URL%/weather3.jpg'); background-size: 100vw
+  100vh;
   background-repeat: no-repeat; ">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
