--- a/front/public/index.html
+++ b/front/public/index.html
@@ -30,8 +30,8 @@
     -->
     <title>Weather Application</title>
   </head>
-  <body style="background-image: url('%PUBLIC_URL%/weatherBackground.jpg'); background-size: 100vw
-  100vh;
+  <body style="background-image: url('%PUBLIC_URL%/weatherBackground2.avif'); background-size: 100vw
+  100vh; background-size: cover; background-attachment: fixed; 
   background-repeat: no-repeat; ">
      <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
